--- a/app/views/admin/_purchase_cart_assign.html.erb
+++ b/app/views/admin/_purchase_cart_assign.html.erb
@@ -1,37 +1,35 @@
 <% if item.persisted? %>
-
-<tr id="cart_<%= item.cart_identity %>">
-  <td data-controller="modify" data-modify-submit-value="true" class="has-inline-centered">
-    <% if item.number > 1 %>
-      <button data-action="modify#minus" class="button_to mr-1">
-        <i class="fa-solid fa-xl fa-circle-minus text-dark-grey"></i>
+  <tr id="cart_<%= item.cart_identity %>">
+    <td data-controller="modify" data-modify-submit-value="true" class="has-inline-centered">
+      <% if item.number > 1 %>
+        <button data-action="modify#minus" class="button_to mr-1">
+          <i class="fa-solid fa-xl fa-circle-minus text-dark-grey"></i>
+        </button>
+      <% else %>
+        <%= button_to({ controller: 'factory/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart&.id }, state: 'redirect', class: 'mr-1') do %>
+          <i class="fa-solid fa-xl fa-circle-minus text-dark-grey"></i>
+        <% end %>
+      <% end %>
+      <%= form_with(theme: nil, scope: :item, url: { controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
+        <%= f.hidden_field :current_cart_id, value: cart.id %>
+        <%= f.number_field :number, value: item.number.to_human, data: { action: 'change->input#form', modify_target: 'input' }, class: 'background-light text-centered', style: 'width: 30px' %>
+      <% end %>
+      <button data-action="modify#plus" class="button_to ml-1">
+        <i class="fa-solid fa-xl fa-circle-plus text-dark-grey"></i>
       </button>
-    <% else %>
-      <%= button_to({ controller: 'factory/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart&.id }, state: 'redirect', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
-        <i class="fa-solid fa-xl fa-circle-minus text-dark-grey"></i>
+    </td>
+    <td>
+      <% if item.organ_id.present? %>
+        <span><%= item.organ.name %></span>
+        <%= button_to({ controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
+          <i class="fa-solid fa-times text-danger"></i>
+        <% end %>
       <% end %>
-    <% end %>
-    <%= form_with(theme: nil, scope: :item, url: { controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }) do |f| %>
-      <%= f.hidden_field :current_cart_id, value: @cart&.id %>
-      <%= f.number_field :number, value: item.number.to_human, data: { action: 'change->input#form', modify_target: 'input' }, class: 'background-light text-centered', style: 'width: 30px' %>
-    <% end %>
-    <button data-action="modify#plus" class="button_to ml-1">
-      <i class="fa-solid fa-xl fa-circle-plus text-dark-grey"></i>
-    </button>
-  </td>
-  <td>
-    <% if item.organ_id.present? %>
-      <span><%= item.organ.name %></span>
-      <%= button_to({ controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
-        <i class="fa-solid fa-times text-danger"></i>
+      <%= button_to({ controller: 'factory/in/items', action: 'edit_assign', id: item.id }) do %>
+        <i class="fa-solid fa-hand-point-right text-info"></i>
       <% end %>
-    <% end %>
-    <%= button_to({ controller: 'factory/in/items', action: 'edit_assign', id: item.id }) do %>
-      <i class="fa-solid fa-hand-point-right text-info"></i>
-    <% end %>
-  </td>
-</tr>
-
+    </td>
+  </tr>
 <% else %>
   <tr id="cart_<%= model.id %>_">
     <td>
