--- a/app/views/factory/admin/product_taxons/_show/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_taxons/_show/_breadcrumb.html.erb
@@ -1,1 +1,11 @@
-<%= render 'product_taxon_breadcrumb' %>
+<li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
+<li>
+  <div class="navbar-item has-dropdown is-hoverable">
+    <%= link_to @product_taxon.name, { controller: 'product_taxons' }, class: 'navbar-link' %>
+    <div class="navbar-dropdown is-right">
+      <% @product_taxon.brothers.each do |taxon| %>
+        <%= link_to taxon.name, { id: taxon.id }, class: 'navbar-item' %>
+      <% end %>
+    </div>
+  </div>
+</li>
