--- a/app/views/factory/admin/base/_product_taxon_breadcrumb.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_breadcrumb.html.erb
@@ -3,8 +3,8 @@
   <div class="navbar-item has-dropdown is-hoverable">
     <%= link_to @product_taxon.name, { controller: 'product_taxons' }, class: 'navbar-link' %>
     <div class="navbar-dropdown is-right">
-      <% Factory::ProductTaxon.all.each do |taxon| %>
-        <%= link_to taxon.name, { product_taxon_id: taxon.id }, class: 'navbar-item' %>
+      <% @product_taxon.brothers.each do |taxon| %>
+        <%= link_to taxon.name, { product_taxon_id: taxon.id }, class: active_helper(product_taxon_id: taxon.id, item: 'navbar-item', active: 'navbar-item is-active') %>
       <% end %>
     </div>
   </div>
