--- a/app/views/factory/admin/products/_buy/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tbody.html.erb
@@ -4,7 +4,7 @@
     <span><%= model.name %></span>
   </div>
 </td>
-<td></td>
+<td colspan="2"></td>
 <td>
   <p><%= model.brand&.name %></p>
 </td>
