--- a/app/views/factory/admin/part_providers/_index/_button.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_button.html.erb
@@ -1,8 +1,8 @@
 <div class="buttons are-small mb-0">
 <% @providers.each do |provider| %>
-  <%= link_to({ action: 'new', organ_id: provider.id, **request.query_parameters.except(:id) }, data: { turbo_frame: 'modal', turbo_scroll: true }, class: 'button is-link') do %>
+  <%= button_to({ action: 'new', organ_id: provider.id, **request.query_parameters.except(:id) }, class: 'button is-link') do %>
     <i class="fa-solid fa-plus"></i>
-    <span class="pl-1"><%= provider.name %></span>
+    <span class="ml-1"><%= provider.name %></span>
   <% end %>
 <% end %>
 </div>
