--- a/app/views/factory/admin/product_taxons/_base/_taxon_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_taxon_tbody.html.erb
@@ -1,9 +1,9 @@
 <tr>
   <td rowspan="<%= size %>">
     <span><%= taxon.name %></span>
-    <%= link_to({ action: 'new', factory_taxon_id: taxon.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, class: 'button is-small is-rounded is-light') do %>
+    <%= button_to({ action: 'new', factory_taxon_id: taxon.id }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-plus text-link"></i>
-      <span class="pl-1"><%= t('.new.title') %></span>
+      <span class="ml-1"><%= t('.new.title') %></span>
     <% end %>
   </td>
 </tr>
