--- a/app/views/factory/admin/taxon/provides/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/taxon/provides/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" class="visibility-hidden">
+    <div data-show-target="item" class="has-inline-centered visibility-hidden">
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
         <i class="fa-solid fa-trash text-danger"></i>
         <span class="ml-1"><%= t('.destroy.title') %></span>
