--- a/app/views/factory/productions/_dialog/_cartx.htmlx.erb
+++ b/app/views/factory/productions/_dialog/_cartx.htmlx.erb
@@ -1,19 +1,19 @@
 <% trade_item = @cart.find_trade_items(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
-<%= button_to({ controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+<%= button_to({ controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl text-dark-grey"></i>
 <% end if trade_item && trade_item.number > 1 %>
-<%= button_to({ controller: 'factory/my/items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+<%= button_to({ controller: 'factory/my/items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl text-dark-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
-<%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }) do |f| %>
+<%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'background-light text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= button_to({ controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1', form: { data: { turbo_scroll: true } }) do %>
+<%= button_to({ controller: 'factory/my/items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1') do %>
   <i class="fa-solid fa-circle-plus fa-xl text-dark-grey"></i>
 <% end if trade_item %>
 
-<%= form_with theme: nil, url: { controller: 'factory/my/items', action: 'create' }, data: { turbo_scroll: true }, class: 'button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'factory/my/items', action: 'create' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :member_id, value: current_member&.id %>
   <%= f.hidden_field :good_type, value: model.base_class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
