--- a/app/views/factory/productions/_rent/_cart.html.erb
+++ b/app/views/factory/productions/_rent/_cart.html.erb
@@ -1,20 +1,20 @@
 <% item = @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
-<%= form_with theme: nil, scope: :item, url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'button_to', data: { turbo_scroll: true } do |f| %>
+<%= form_with theme: nil, scope: :item, url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'button_to' do |f| %>
   <%= f.hidden_field :number, value: item.number - 1 %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= button_tag class: 'mr-1' do %>
     <i class="fa-solid fa-circle-minus fa-xl text-dark-grey"></i>
   <% end %>
 <% end if item && item.number > 1 %>
-<%= button_to({ controller: item_con, action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+<%= button_to({ controller: item_con, action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl text-dark-grey"></i>
 <% end if item && item.number <= 1 %>
-<%= form_with(theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input', turbo_scroll: true }) do |f| %>
+<%= form_with(theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input' }) do |f| %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.number_field :number, value: item.number.to_fs(:rounded, precision: 0), data: { action: 'change->input#form' }, class: 'background-light text-centered', style: 'width: 30px' %>
 <% end if item %>
-<%= form_with theme: nil, scope: :item, url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'button_to', data: { turbo_scroll: true } do |f| %>
+<%= form_with theme: nil, scope: :item, url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'button_to' do |f| %>
   <%= f.hidden_field :number, value: item.number + 1 %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= button_tag class: 'ml-1' do %>
@@ -22,7 +22,7 @@
   <% end %>
 <% end if item %>
 
-<%= form_with theme: nil, url: { controller: item_con, action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: item_con, action: 'create' }, state: 'redirect_return', class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.base_class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :number, value: 1 %>
