--- a/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
@@ -54,7 +54,7 @@
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
-  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id, product_id: model.product_id }, data: { controller: 'input' } do |f| %>
+  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id, product_id: model.product_id }, data: { controller: 'input' }, class: 'mt-3' do |f| %>
     <%= f.check_box :automatic, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
