--- a/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
@@ -1,7 +1,5 @@
-<td>
-  <p><%= model.name %></p>
-  <p><span class="tag"><%= model.part_taxon.name %></span></p>
-</td>
+<td><%= model.name %></td>
+<td><%= model.part_taxon.name %></td>
 <td>
   <p><%= model.min_select %></p>
   <p><%= model.max_select %></p>
