--- a/app/views/factory/admin/product_part_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_base/_index_thead.html.erb
@@ -1,4 +1,5 @@
 <th><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::ProductPartTaxon.human_attribute_name(:part_taxon_id) %></th>
 <th>
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></p>
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></p>
