--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -4,9 +4,7 @@
     <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
   <% end %>
 </th>
-<th>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></p>
-  <p>已上架</p>
-</th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
+<th>已上架</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:provides_count) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
