--- a/app/views/factory/admin/product_taxons/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tr.html.erb
@@ -8,9 +8,9 @@
       <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-info"></i>
       <% end %>
-      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, form: { data: { turbo_confirm: t('.destroy.confirm') } }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, disabled: model.products_count > 0, aria: { label: t('.destroy.title') }, form: { data: { turbo_confirm: t('.destroy.confirm') } }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-trash text-danger"></i>
-      <% end if model.products_count <= 0 %>
+      <% end %>
     </div>
   </td>
 </tr>
