--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'index_bar' %>
 <%= render 'index_actions' %>
 
-<%= render layout: 'index_table' do %>
+<%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :model %>
 <% end %>
 
