--- a/app/views/admin/_factory_admin.html.erb
+++ b/app/views/admin/_factory_admin.html.erb
@@ -7,8 +7,8 @@
       <strong><%= t('factory.admin.title') %></strong>
     </div>
     <div data-empty-target="content">
-      <%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'tag') do %>
-        <span><%= t('factory.admin.product_taxons.index.title') %></span>
+      <%= link_to({ controller: 'factory/admin/taxons' }, class: 'tag') do %>
+        <span><%= t('factory.admin.taxons.index.title') %></span>
       <% end %>
     </div>
   </div>
