rename to taxon logic

--- a/app/views/application/_menu_product_taxon.html.erb
+++ b/app/views/application/_menu_product_taxon.html.erb
@@ -1,7 +1,7 @@
 <div class="weui-panel is-box is-borderless">
   <div class="weui-panel__bd">
     <div class="columns is-mobile">
-      <%= render partial: 'menu_item_taxon', collection: Factory::ProductTaxon.default_where(default_params).enabled, as: :model %>
+      <%= render partial: 'menu_item_taxon', collection: Factory::Taxon.default_where(default_params).enabled, as: :model %>
     </div>
   </div>
 </div>
