--- a/app/views/factory/admin/taxons/_all/_index_thead.html.erb
+++ b/app/views/factory/admin/taxons/_all/_index_thead.html.erb
@@ -1,4 +1,4 @@
-<th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:nav) %></th>
+<th><%= Factory::Taxon.human_attribute_name(:factory_taxon_id) %></th>
+<th><%= Factory::Taxon.human_attribute_name(:name) %></th>
+<th><%= Factory::Taxon.human_attribute_name(:scene_id) %></th>
+<th><%= Factory::Taxon.human_attribute_name(:nav) %></th>
