--- a/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
@@ -5,7 +5,7 @@
   <p><%= model.max_select %></p>
 </td>
 <td class="text-grey"><%= model.select_str %></td>
-<td><%= link_to model.product_parts_count, { controller: 'product_parts', product_part_taxon_id: model.id } %></td>
+<td><%= link_to model.product_parts_count, { controller: 'product_parts', taxon_component_id: model.id } %></td>
 <td>
 <% model.product_parts.each do |product_part| %>
   <p>
