--- a/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'modal', model: @product_part_taxon, url: { action: 'create' }, data: { controller: 'equal' } do |f| %>
+<%= form_with theme: 'modal', model: @taxon_component, url: { action: 'create' }, data: { controller: 'equal' } do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
