--- a/app/views/factory/admin/productions/_part/_form.html.erb
+++ b/app/views/factory/admin/productions/_part/_form.html.erb
@@ -5,8 +5,8 @@
   </header>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <% @product.product_part_taxons.each do |product_part_taxon| %>
-      <%= f.collection_check_boxes :part_ids, product_part_taxon.parts, :id, :name, { label: product_part_taxon.name, wrap: { label: 'field-label', select: 'field-body control' } }, { multiple: true } %>
+    <% @product.taxon_components.each do |taxon_component| %>
+      <%= f.collection_check_boxes :part_ids, taxon_component.parts, :id, :name, { label: taxon_component.name, wrap: { label: 'field-label', select: 'field-body control' } }, { multiple: true } %>
     <% end %>
   </section>
   <footer class="modal-card-foot">
