--- a/app/views/factory/productions/_show/_brothers.html.erb
+++ b/app/views/factory/productions/_show/_brothers.html.erb
@@ -1,6 +1,6 @@
 <div class="box">
   <div class="box-body">选择型号</div>
-  <div class="p-4 buttons are-small" data-controller="custom" data-custom-only-value="<%# product_part_taxon.only_one? %>">
+  <div class="p-4 buttons are-small" data-controller="custom" data-custom-only-value="<%# taxon_component.only_one? %>">
   <% @production.brothers.enabled.each do |brother| %>
     <%= link_to({ id: brother.id }, data: { controller: 'scroll', action: 'scroll#preserve' }, class: active_helper(id: brother.id, item: 'button', active: 'button is-primary')) do %>
       <span><%= brother.name %></span>
