--- a/app/views/factory/admin/product_part_taxons/_show_table.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_show_table.html.erb
@@ -1,12 +1,12 @@
 <div>
   <dt><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></dt>
-  <dd><%= @product_part_taxon.name %></dd>
+  <dd><%= @taxon_component.name %></dd>
 </div>
 <div>
   <dt><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></dt>
-  <dd><%= @product_part_taxon.min_select %></dd>
+  <dd><%= @taxon_component.min_select %></dd>
 </div>
 <div>
   <dt><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></dt>
-  <dd><%= @product_part_taxon.max_select %></dd>
+  <dd><%= @taxon_component.max_select %></dd>
 </div>
