--- a/app/views/factory/admin/products/_sort/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_sort/_index_tbody.html.erb
@@ -13,14 +13,14 @@
   <%= model.covers_attachments.size %>
 </td>
 <td>
-  <% model.product_part_taxons.each do |product_part_taxon| %>
+  <% model.taxon_components.each do |taxon_component| %>
     <p>
-      <span><%= product_part_taxon.name %></span>
-      <span class="text-grey size-7"><%= product_part_taxon.select_str %></span>
+      <span><%= taxon_component.name %></span>
+      <span class="text-grey size-7"><%= taxon_component.select_str %></span>
     </p>
   <% end %>
   <p>
-    <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, aria: { label: t('factory.admin.product_part_taxons.index.title') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ controller: 'taxon_components', product_id: model.id }, aria: { label: t('factory.admin.taxon_components.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-tree"></i>
     <% end %>
   </p>
