--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -28,16 +28,16 @@
 <% end %>
 </td>
 <td>
-  <% model.product_part_taxons.each do |product_part_taxon| %>
+  <% model.taxon_components.each do |taxon_component| %>
     <p>
-      <span><%= product_part_taxon.name %></span>
-      <span class="text-grey size-7"><%= product_part_taxon.select_str %></span>
+      <span><%= taxon_component.name %></span>
+      <span class="text-grey size-7"><%= taxon_component.select_str %></span>
     </p>
   <% end %>
   <p data-show-target="item" class="visibility-hidden">
-    <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ controller: 'taxon_components', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-tree"></i>
-      <span class="pl-1"><%= t('.product_part_taxons.index.title') %></span>
+      <span class="pl-1"><%= t('.taxon_components.index.title') %></span>
     <% end %>
   </p>
 </td>
