--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -1,20 +1,20 @@
-<div data-id="<%= product_part_taxon.id %>" class="box mt-3">
+<div data-id="<%= taxon_component.id %>" class="box mt-3">
   <strong>
-    <span><%= product_part_taxon.name %></span>
-    <span class="size-7"><%= product_part_taxon.select_str %></span>
+    <span><%= taxon_component.name %></span>
+    <span class="size-7"><%= taxon_component.select_str %></span>
   </strong>
-  <div data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>" class="buttons are-small no-disabled pt-4">
+  <div data-controller="custom" data-custom-only-value="<%= taxon_component.only_one? %>" class="buttons are-small no-disabled pt-4">
   <% product_parts.each do |product_part| %>
-    <label class="button <%= @production.part_ids.include?(product_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= product_part.part_id %>"<%= product_part_taxon.disabled?(@production.part_ids, product_part.part_id) ? ' disabled' : '' %>>
+    <label class="button <%= @production.part_ids.include?(product_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= product_part.part_id %>"<%= taxon_component.disabled?(@production.part_ids, product_part.part_id) ? ' disabled' : '' %>>
       <span><%= product_part.part.name %></span>
       <% if product_part.part.price.to_d > 0 %>
         <span class="ml-1"><%= product_part.part.price.to_money.format.html_safe %></span>
       <% end %>
-      <% if product_part_taxon.cancelable?(@production.part_ids, product_part.part_id) %>
+      <% if taxon_component.cancelable?(@production.part_ids, product_part.part_id) %>
         <i class="fa-solid fa-xmark ml-1"></i>
       <% end %>
-      <%= hidden_field_tag 'part_ids[]', product_part.part_id, form: 'edit_custom', data: { part_taxon_id: product_part.part.taxon_id }, id: nil if @production.part_ids.include?(product_part.part_id) && product_part_taxon.disabled?(@production.part_ids, product_part.part_id) %>
-      <%= check_box_tag 'part_ids[]', product_part.part_id, @production.part_ids.include?(product_part.part_id), disabled: product_part_taxon.disabled?(@production.part_ids, product_part.part_id), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{product_part.part_id}", form: 'edit_custom' %>
+      <%= hidden_field_tag 'part_ids[]', product_part.part_id, form: 'edit_custom', data: { part_taxon_id: product_part.part.taxon_id }, id: nil if @production.part_ids.include?(product_part.part_id) && taxon_component.disabled?(@production.part_ids, product_part.part_id) %>
+      <%= check_box_tag 'part_ids[]', product_part.part_id, @production.part_ids.include?(product_part.part_id), disabled: taxon_component.disabled?(@production.part_ids, product_part.part_id), data: { action: 'custom#toggle', part_taxon_id: taxon_component.part_taxon_id }, class: 'weui-check', id: "part_#{product_part.part_id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
