--- a/app/views/factory/admin/base/_product_bar.html.erb
+++ b/app/views/factory/admin/base/_product_bar.html.erb
@@ -3,15 +3,15 @@
 <div class="tabs is-centered mb-3">
   <ul>
     <li class="<%= active_helper(products: ['show', 'edit'], active: 'is-active') %>">
-      <%= link_to t('factory.admin.products.show.title'), { controller: 'factory/admin/products', action: 'show', taxon_id: @product.taxon_id, id: @product.id } %>
+      <%= link_to t('.products.show.title'), { controller: 'products', action: 'show', taxon_id: @product.taxon_id, id: @product.id } %>
     </li>
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
-      <%= link_to t('factory.admin.productions.index.title'), { controller: 'factory/admin/productions', action: 'index', product_id: @product.id } %>
+      <%= link_to t('.productions.index.title'), { controller: 'productions', action: 'index', product_id: @product.id } %>
     </li>
-    <li class="<%= active_helper(controllers: 'taxon_components', active: 'is-active') %>">
-      <%= link_to({ controller: 'taxon_components', product_id: @product.id }) do %>
+    <li class="<%= active_helper(controllers: 'product_components', active: 'is-active') %>">
+      <%= link_to({ controller: 'product_components', product_id: @product.id }) do %>
         <i class="fa-solid fa-tree"></i>
-        <span class="pl-1"><%= t('.taxon_components.index.title') %></span>
+        <span class="pl-1"><%= t('.product_components.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'fits', active: 'is-active') %>">
