--- a/app/views/factory/admin/product_components/_show_table.html.erb
+++ b/app/views/factory/admin/product_components/_show_table.html.erb
@@ -1,12 +1,12 @@
 <div>
-  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></dt>
-  <dd><%= @taxon_component.name %></dd>
+  <dt><%= Factory::ProductComponent.human_attribute_name(:name) %></dt>
+  <dd><%= @product_component.name %></dd>
 </div>
 <div>
-  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></dt>
-  <dd><%= @taxon_component.min_select %></dd>
+  <dt><%= Factory::ProductComponent.human_attribute_name(:min_select) %></dt>
+  <dd><%= @product_component.min_select %></dd>
 </div>
 <div>
-  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></dt>
-  <dd><%= @taxon_component.max_select %></dd>
+  <dt><%= Factory::ProductComponent.human_attribute_name(:max_select) %></dt>
+  <dd><%= @product_component.max_select %></dd>
 </div>
