--- a/app/views/factory/admin/product_components/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_components/_base/_index_thead.html.erb
@@ -1,9 +1,9 @@
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:part_taxon_id) %></th>
+<th><%= Factory::ProductComponent.human_attribute_name(:name) %></th>
+<th><%= Factory::ProductComponent.human_attribute_name(:part_taxon_id) %></th>
 <th>
-  <p><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></p>
-  <p><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></p>
+  <p><%= Factory::ProductComponent.human_attribute_name(:min_select) %></p>
+  <p><%= Factory::ProductComponent.human_attribute_name(:max_select) %></p>
 </th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:select_str) %></th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:product_parts_count) %></th>
+<th><%= Factory::ProductComponent.human_attribute_name(:select_str) %></th>
+<th><%= Factory::ProductComponent.human_attribute_name(:product_parts_count) %></th>
 <th style="width: 30%"></th>
