--- a/app/views/factory/admin/taxons/show.html.erb
+++ b/app/views/factory/admin/taxons/show.html.erb
@@ -1,3 +1,3 @@
-<%= render partial: 'taxon_bar' %>
+<%= render partial: 'taxon_bar', locals: { taxon: @taxon } %>
 
 <%= render partial: 'show_no_frame' %>
