--- a/app/views/factory/admin/product_components/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_components/_base/_index_tbody.html.erb
@@ -5,9 +5,9 @@
   <p><%= model.max_select %></p>
 </td>
 <td class="text-grey"><%= model.select_str %></td>
-<td><%= link_to model.product_parts_count, { controller: 'product_parts', taxon_component_id: model.id } %></td>
+<td><%= link_to model.component_parts_count, { controller: 'component_parts', component_id: model.id } %></td>
 <td>
-<% model.product_parts.each do |product_part| %>
+<% model.component_parts.each do |product_part| %>
   <p>
     <span><%= product_part.part.name %></span>
     <% if product_part.default %>
