--- a/app/views/factory/admin/productions/_part/_form.html.erb
+++ b/app/views/factory/admin/productions/_part/_form.html.erb
@@ -5,11 +5,9 @@
   </header>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <% @product.taxon_components.each do |taxon_component| %>
-      <%= f.collection_check_boxes :part_ids, taxon_component.parts, :id, :name, { label: taxon_component.name, wrap: { label: 'field-label', select: 'field-body control' } }, { multiple: true } %>
+    <% @product.components.each do |component| %>
+      <%= f.collection_check_boxes :part_ids, component.parts, :id, :name, { label: component.name, wrap: { label: 'field-label', select: 'field-body control' } }, { multiple: true } %>
     <% end %>
   </section>
-  <footer class="modal-card-foot">
-    <%= f.submit %>
-  </footer>
+  <%= f.submit %>
 <% end %>
