--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -25,14 +25,14 @@
   <p><%= model.taxon&.name %></p>
 </td>
 <td>
-  <% model.taxon_components.each do |taxon_component| %>
+  <% model.components.each do |component| %>
     <p>
-      <span><%= taxon_component.name %></span>
-      <span class="text-grey size-7"><%= taxon_component.select_str %></span>
+      <span><%= component.name %></span>
+      <span class="text-grey size-7"><%= component.select_str %></span>
     </p>
   <% end %>
   <p>
-    <%= link_to({ controller: 'taxon_components', product_id: model.id }, aria: { label: t('factory.admin.taxon_components.index.title') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ controller: 'product_components', product_id: model.id }, aria: { label: t('.product_components.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-tree"></i>
     <% end %>
   </p>
