--- a/app/views/factory/admin/production_parts/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_parts/_base/_index_tbody.html.erb
@@ -1,16 +1,9 @@
 <td>
-  <p><%= model.scene&.title %></p>
-  <p><%= model.produce_on %></p>
+  <p><%= model.part.name %></p>
 </td>
 <td>
-  <p><time data-controller="time"><%= model.start_at&.to_fs(:iso8601) %></time></p>
-  <p><time data-controller="time"><%= model.finish_at&.to_fs(:iso8601) %></time></p>
 </td>
-<td><%= model.state_i18n %></td>
+<td><%= model.number %></td>
+<td></td>
 <td>
-  <p><%= model.planned_count %></p>
-  <p><%= link_to model.production_items_count, { controller: 'production_plan_items', production_plan_id: model.id } %></p>
-</td>
-<td>
-  <p><%= model.station&.name %></p>
 </td>
