--- a/app/views/factory/admin/production_parts/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_parts/_base/_index_tbody.html.erb
@@ -1,9 +1,2 @@
-<td>
-  <p><%= model.part.name %></p>
-</td>
-<td>
-</td>
+<td><%= model.part.name %></td>
 <td><%= model.number %></td>
-<td></td>
-<td>
-</td>
