--- a/app/views/factory/admin/production_parts/_form.html.erb
+++ b/app/views/factory/admin/production_parts/_form.html.erb
@@ -1,4 +1,1 @@
-<%= f.collection_select :scene_id, @scenes, :id, :title, selected: f.object.product.taxon.scene_id %>
-<%= f.select :state, options_for_select(Factory::ProductionPlan.options_i18n(:state), f.object.state) %>
-<%= f.number_field :planned_count, required: true %>
-<%= f.date_field :produce_on, required: true %>
+<%= f.number_field :number, required: true %>
