--- a/app/views/factory/admin/base/_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html.erb
@@ -12,13 +12,13 @@
     </li>
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
       <%= link_to({ controller: 'productions', action: 'taxon', taxon_id: @taxon.id }) do %>
-        <i class="fa-solid fa-list"></i>
+        <i class="fa-solid fa-eye"></i>
         <span class="pl-1"><%= t('factory.admin.productions.taxon.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'taxon_components', active: 'is-active') %>">
       <%= link_to({ controller: 'taxon_components', taxon_id: @taxon.id }) do %>
-        <i class="fa-solid fa-tree"></i>
+        <i class="fa-solid fa-cogs"></i>
         <span class="pl-1"><%= t('.taxon_components.index.title') %></span>
       <% end %>
     </li>
