--- a/app/views/factory/admin/base/_production_bar.html.erb
+++ b/app/views/factory/admin/base/_production_bar.html.erb
@@ -4,21 +4,21 @@
     <li class="<%= active_helper(productions: ['show', 'edit'], active: 'is-active') %>">
       <%= link_to t('.productions.show.title'), { controller: 'factory/admin/productions', action: 'show', product_id: @production.product_id, id: @production.id } %>
     </li>
-    <li class="<%= active_helper(controllers: 'production_plans', active: 'is-active') %>">
-      <%= link_to({ controller: 'production_plans', production_id: @production.id }) do %>
-        <i class="fa-solid fa-list text-info"></i>
-        <span class="pl-1"><%= t('.production_plans.index.title') %></span>
-      <% end %>
-    </li>
     <li class="<%= active_helper(controllers: 'production_parts', active: 'is-active') %>">
       <%= link_to({ controller: 'production_parts', production_id: @production.id }) do %>
         <i class="fa-solid fa-folder-tree text-primary"></i>
         <span class="pl-1"><%= t('.production_parts.index.title') %></span>
       <% end %>
     </li>
+    <li class="<%= active_helper(controllers: 'production_plans', active: 'is-active') %>">
+      <%= link_to({ controller: 'production_plans', production_id: @production.id }) do %>
+        <i class="fa-solid fa-list text-info"></i>
+        <span class="pl-1"><%= t('.production_plans.index.title') %></span>
+      <% end %>
+    </li>
     <li class="<%= active_helper(controllers: 'production_items', active: 'is-active') %>">
       <%= link_to({ controller: 'production_items', production_id: @production.id }) do %>
-        <i class="fa-solid fa-list text-info"></i>
+        <i class="fa-solid fa-list text-primary"></i>
         <span class="pl-1"><%= t('.production_items.index.title') %></span>
       <% end %>
     </li>
