--- a/app/views/factory/admin/produce_on/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/produce_on/_index/_index_tr.html.erb
@@ -1,6 +1,8 @@
 <tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" class="visibility-hidden"></div>
+    <div data-show-target="item" class="visibility-hidden">
+
+    </div>
   </td>
 </tr>
