--- a/app/views/factory/admin/produce_on/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_on/_index/_index_tbody.html.erb
@@ -1,7 +1,4 @@
+<% produce_plan = @produce_plans[produce_on] %>
+
 <td><%= produce_on %></td>
-<td>
-<%= @produce_plans[produce_on] %>
-
-
-</td>
 <td></td>
