--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -27,7 +27,7 @@
   <% end if production_plan %>
 </td>
 <td>
-  <%= link_to({ controller: 'production_items', production_id: production_plan.production_id, production_plan_id: production_plan.id }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ controller: 'production_items', production_id: production_plan.production_id, produce_on: production_plan.produce_on }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-barcode-scan"></i>
     <span class="pl-1">生产明细</span>
     <span class="text-grey">（<%= production_plan.production_items_count %>）</span>
