--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -1,40 +1,23 @@
-<% production_plan = @production_plans.find(&->(i){ i.production_id == model.id }) %>
-<td><%= link_to model.name, { controller: 'productions', action: 'index', product_id: model.product_id, id: model.id }, text: true %></td>
-<td><%= model.price.to_money.format.html_safe %></td>
+<td><%= link_to model.production.name, { controller: 'productions', action: 'index', product_id: model.product_id, id: model.production_id }, text: true %></td>
+<td><%= model.production.price.to_money.format.html_safe %></td>
 <td>
-  <div class="flex align-items-center">
-    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { 'production_plan[planned_count]': production_plan.planned_count - 1 }, class: 'mr-1') do %>
-      <i class="fa-solid fa-circle-minus fa-2x"></i>
-    <% end if production_plan && production_plan.planned_count > 1 %>
-    <%= button_to({ controller: 'production_plans', action: 'destroy', production_id: model.id, id: production_plan.id }, method: :delete, class: 'mr-1') do %>
-      <i class="fa-solid fa-circle-minus fa-2x"></i>
-    <% end if production_plan && production_plan.planned_count <= 1 %>
-    <%= form_with(theme: nil, scope: 'production_plan', url: { controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, data: { controller: 'input' }) do |f| %>
-      <%= f.number_field :planned_count, value: production_plan.planned_count, data: { action: 'change->input#form' }, class: 'background-light text-centered', style: 'width: 50px; height: 26px' %>
-    <% end if production_plan %>
-    <%= button_to({ controller: 'production_plans', action: 'create', production_id: model.id }, params: { 'production_plan[scene_id]': @produce_plan.scene_id, 'production_plan[produce_on]': @produce_plan.produce_on }, class: 'ml-1') do %>
-      <i class="fa-solid fa-circle-plus fa-2x text-grey"></i>
-    <% end unless production_plan %>
-    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { 'production_plan[planned_count]': production_plan.planned_count + 1 }, class: 'ml-1') do %>
-      <i class="fa-solid fa-circle-plus fa-2x"></i>
-    <% end if production_plan %>
-  </div>
+  <%= render partial: 'production_plan', locals: { production_plan: production_plan } %>
 </td>
 <td>
   <%= form_with theme: nil, model: production_plan, url: { controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :specialty, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
-  <% end if production_plan %>
+  <% end %>
 </td>
 <td>
   <%= link_to({ controller: 'production_items', production_id: production_plan.production_id, produce_on: production_plan.produce_on }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-barcode-scan"></i>
     <span class="pl-1">生产明细</span>
     <span class="text-grey">（<%= production_plan.production_items_count %>）</span>
-  <% end if production_plan %>
+  <% end %>
   <%= link_to({ controller: 'trade_items', production_id: production_plan.production_id, produce_on: production_plan.produce_on }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-bag-shopping text-info"></i>
     <span class="pl-1">订单明细</span>
     <span class="text-grey">（<%= production_plan.trade_items_count %>）</span>
-  <% end if production_plan %>
+  <% end %>
 </td>
