--- a/app/views/factory/admin/produce_plans/products.html.erb
+++ b/app/views/factory/admin/produce_plans/products.html.erb
@@ -1,5 +1,5 @@
-<%= render layout: 'index_table' do %>
-<% @products.each do |product| %>
+<%= render layout: 'product_table' do %>
+<% @productions.group_by(&:product).each do |product, productions| %>
   <tr>
     <td rowspan="<%= product.productions_count + 1 %>">
       <div class="is-several">
@@ -8,7 +8,21 @@
       </div>
     </td>
   </tr>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: product.productions, as: :model %>
+  <%= render partial: 'product_tbody', layout: 'product_tr', collection: productions, as: :model %>
+<% end %>
+<% end %>
+
+<%= render layout: 'index_tbody' do %>
+<% @production_plans.group_by(&:product).each do |product, production_plans| %>
+  <tr>
+    <td rowspan="<%= product.productions_count + 1 %>">
+      <div class="is-several">
+        <%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if product.logo.attached? %>
+        <%= link_to product.name, { action: 'show', id: product.id }, text: true %>
+      </div>
+    </td>
+  </tr>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: production_plans, as: :model %>
 <% end %>
 <% end %>
 
