--- a/app/views/factory/admin/produce_plans/products.html.erb
+++ b/app/views/factory/admin/produce_plans/products.html.erb
@@ -12,18 +12,19 @@
 <% end %>
 <% end %>
 
-<%= render layout: 'index_tbody' do %>
-<% @production_plans.group_by(&:product).each do |product, production_plans| %>
-  <tr>
-    <td rowspan="<%= product.productions_count + 1 %>">
-      <div class="is-several">
-        <%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if product.logo.attached? %>
-        <%= link_to product.name, { action: 'show', id: product.id }, text: true %>
-      </div>
-    </td>
-  </tr>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: production_plans, as: :model %>
-<% end %>
+<%= render layout: 'index_table' do %>
+  <% @production_plans.group_by(&:product).each do |product, production_plans| %>
+    <tr>
+      <td rowspan="<%= product.productions_count + 1 %>">
+        <div class="is-several">
+          <%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if product.logo.attached? %>
+          <%= link_to product.name, { action: 'show', id: product.id }, text: true %>
+        </div>
+      </td>
+    </tr>
+
+    <%= render partial: 'index_tbody', layout: 'index_tr', collection: production_plans, as: :model %>
+  <% end %>
 <% end %>
 
-<%= paginate @products %>
+<%= paginate @productions %>
